# chess-agent

./: README.md  pyproject.toml
agent/: __main__.py  chess_api.py  graph.py  system_prompt.jinja
tests/: test_chess_api.py
